fix the letter spacing following the client meeting

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,7 @@ html {
 body {
     font-family: 'Bebas Kai', sans-serif;
     font-weight: 480;
+    letter-spacing: 1.5px;
     color: #ffffff;
     margin: 0;
     padding: 0;
